Fixed dark mode

--- a/src/ui/flasktest2/static/styles/main.css
+++ b/src/ui/flasktest2/static/styles/main.css
@@ -23,7 +23,7 @@ body {
     margin-top: 50px;
 }
 
-h1, h2 {
+h1, h2, h3 {
     color: #333;
 }
 
